--- a/app/views/register.scala.html
+++ b/app/views/register.scala.html
@@ -10,7 +10,7 @@
 @main("Register", scripts, nav="home"){
 
 		<div id="register-form">
-			<form id="registerForm" class="form-horizontal" action="@routes.Application.index()" method="POST" onsubmit="register();">
+			<form id="registerForm" class="form-horizontal" action="@routes.Application.index()" method="POST"">
 				<div class="form-group">
 					<label for="inputNickname3" class="col-sm-2 control-label">Nickname</label>
 					<div class="col-sm-10">
@@ -37,7 +37,7 @@
 				</div>
 				<div class="form-group">
 					<div class="col-sm-offset-2 col-sm-10">
-						<button type="submit" class="btn btn-default" onsubmit="register();">Register</button>
+						<button type="submit" class="btn btn-default">Register</button>
 					</div>
 				</div>
 			</form>
