--- a/app/views/profile.scala.html
+++ b/app/views/profile.scala.html
@@ -3,16 +3,14 @@
 @scripts = {
 <link rel="stylesheet" media="screen" href="@routes.Assets.at("stylesheets/profile.css")">
 <script src="@routes.Assets.at("javascripts/register.js")" type="text/javascript"></script>
-<script type="text/javascript">
-	fill();
-</script>
+
 } 
 
 
 @main("Profile", scripts, nav="profile") {
 
 <div id="register-form">
-	<form class="form-horizontal" onsubmit="register(); return false;">
+	<form name="saveprofile" class="form-horizontal" onsubmit="register(); return false;">
 		<div class="form-group">
 			<label for="inputNickname3" class="col-sm-2 control-label">Nickname</label>
 			<div class="col-sm-10">
@@ -57,4 +55,7 @@
 		</div>
 	</form>
 </div>
+<script type="text/javascript">
+	$(document).ready(fill());
+</script>
 }
